--- a/Amh.MVVM.UiDemo/App.xaml
+++ b/Amh.MVVM.UiDemo/App.xaml
@@ -4,6 +4,12 @@
              xmlns:local="clr-namespace:Amh.MVVM.UiDemo"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="LabelMouseOver" TargetType="Label">
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="BlueViolet"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
     </Application.Resources>
 </Application>
